[style] Fix nav button font size, wrap expert metrics at 5 per row

--- a/src/components/navigation/navigation.module.css
+++ b/src/components/navigation/navigation.module.css
@@ -13,7 +13,7 @@
   margin-right: 0px;
   cursor: pointer;
   border-radius: 4px;
-  font-size: inherit;
+  font-size: 13px;
 }
 
 .navButton:hover {
